--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Min första HTML-sida
     <p> Det var väldigt roligt, men det var ganska svårt. </p>
     <hr></hr>
     <p> Det är bra att jag har min smarta dotter jämnte mig. </p>
-    <img> </img>
+    <img src="Snapchat-1215889251.jpg"> </img>
     <p> HTML är ett <em> jättebra </em> språk för att skapa <strong> dokument </strong> </p>
 </body>
 </html>
